--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "custom-bs": "^1.3.0",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
+    "pdfequips-navbar": "^1.0.5",
     "pdfjs-dist": "^3.8.162",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -31,6 +32,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "next-transpile-modules": "^10.0.1",
     "sass": "^1.66.1",
     "terser-webpack-plugin": "^5.3.9"
   }
