--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "custom-bs": "^1.3.0",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
-    "pdfequips-navbar": "^2.0.6",
+    "pdfequips-navbar": "^3.0.32",
     "pdfjs-dist": "^3.8.162",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -32,6 +32,8 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "next-transpile-modules": "^10.0.1",
     "sass": "^1.66.1",
     "terser-webpack-plugin": "^5.3.9"
