--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "pdfequips-navbar": "^3.0.40",
+    "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
