--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "custom-bs": "^1.3.0",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
-    "pdfequips-navbar": "^3.0.40",
+    "pdfequips-navbar": "^3.0.49",
     "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
     "react": "18.2.0",
@@ -29,6 +29,7 @@
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.2",
     "react-tooltip": "^5.21.1",
+    "react-zoom-pan-pinch": "^3.6.1",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
   },
