--- a/package.json
+++ b/package.json
@@ -10,32 +10,43 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.5.0",
     "cssmolecule": "^1.0.1",
     "custom-bs": "^1.3.0",
+    "interactjs": "^1.10.27",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "pdfequips-navbar": "^3.0.49",
     "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
     "react": "18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-pdf": "^9.1.0",
+    "react-pinch-zoom": "^0.1.4",
     "react-redux": "^8.1.2",
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
     "react-tooltip": "^5.21.1",
     "react-zoom-pan-pinch": "^3.6.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-scroll": "^1.8.10",
+    "@types/react-window": "^1.8.8",
     "next-transpile-modules": "^10.0.1",
     "sass": "^1.66.1",
     "terser-webpack-plugin": "^5.3.9"
