--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.13.0",
     "react-pdf": "^9.1.0",
     "react-pinch-zoom": "^0.1.4",
     "react-redux": "^8.1.2",
