scroll, and zoom are working

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "interactjs": "^1.10.27",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
-    "pdfequips-navbar": "^3.0.49",
+    "pdfequips-navbar": "^3.0.51",
     "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
     "react": "18.2.0",
@@ -39,6 +39,7 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.21.1",
+    "react-window": "^1.8.10",
     "react-zoom-pan-pinch": "^3.6.1",
     "slick-carousel": "^1.8.1",
     "typescript": "5.2.2",
