--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "custom-bs": "^1.3.0",
     "interactjs": "^1.10.27",
     "js-cookie": "^3.0.5",
+    "mui-color-input": "^3.0.0",
     "next": "13.4.19",
     "pdfequips-navbar": "^3.0.51",
     "pdfequips-open-graph": "^1.0.0",
@@ -37,11 +38,14 @@
     "react-pinch-zoom": "^0.1.4",
     "react-redux": "^8.1.2",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.8.0",
+    "react-sketch-canvas": "^6.2.0",
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.21.1",
     "react-window": "^1.8.10",
     "react-zoom-pan-pinch": "^3.6.1",
     "slick-carousel": "^1.8.1",
+    "svg-crowbar": "^0.7.0",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
   },
