--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.5.0",
     "cssmolecule": "^1.0.1",
     "custom-bs": "^1.3.0",
+    "fabric": "^5.4.0",
     "interactjs": "^1.10.27",
     "js-cookie": "^3.0.5",
     "mui-color-input": "^3.0.0",
@@ -29,8 +30,12 @@
     "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
@@ -50,6 +55,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.8",
     "@types/js-cookie": "^3.0.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-scroll": "^1.8.10",
