--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cssmolecule": "^1.0.1",
     "custom-bs": "^1.3.0",
     "fabric": "^5.4.0",
+    "flex-system": "^2.1.0",
+    "i-text-input": "^1.0.0",
     "interactjs": "^1.10.27",
     "js-cookie": "^3.0.5",
     "mui-color-input": "^3.0.0",
@@ -29,12 +31,13 @@
     "pdfequips-navbar": "^3.0.51",
     "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
-    "react": "18.2.0",
+    "rc-slider": "^11.1.5",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-infinite-scroll-component": "^6.1.0",
