--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "slick-carousel": "^1.8.1",
     "svg-crowbar": "^0.7.0",
     "typescript": "5.2.2",
+    "uuid": "^10.0.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-scroll": "^1.8.10",
     "@types/react-window": "^1.8.8",
+    "@types/uuid": "^10.0.0",
     "next-transpile-modules": "^10.0.1",
     "sass": "^1.66.1",
     "terser-webpack-plugin": "^5.3.9"
