have to build on windows

--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "cssmolecule": "^1.0.1",
     "custom-bs": "^1.3.0",
     "fabric": "^5.4.0",
+    "fetch-subscription-status": "^1.0.2",
     "flex-system": "^2.1.0",
     "i-text-input": "^1.0.0",
     "interactjs": "^1.10.27",
     "js-cookie": "^3.0.5",
     "mui-color-input": "^3.0.0",
     "next": "13.4.19",
-    "pdfequips-navbar": "^3.3.3",
+    "pdfequips-footer": "^0.1.6",
+    "pdfequips-navbar": "^3.3.8",
     "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
     "rc-slider": "^11.1.5",
