--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.10.3",
     "@heroicons/react": "^1.0.6",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
@@ -30,7 +31,7 @@
     "mui-color-input": "^3.0.0",
     "next": "13.4.19",
     "pdfequips-footer": "^0.1.6",
-    "pdfequips-navbar": "^3.3.8",
+    "pdfequips-navbar": "^3.4.3",
     "pdfequips-open-graph": "^1.0.0",
     "pdfjs-dist": "^3.8.162",
     "rc-slider": "^11.1.5",
